--- a/src/index.pug
+++ b/src/index.pug
@@ -12,20 +12,21 @@ html(lang="en-gb")
 			include ./index.css
 	body
 		main
-			h1 Wrong Answers Only game
-			h2 A quiz game where the wrong answers are the right ones.
-			h3 How to play
-			ol
-				li You will be given a question, you must answer it with a wrong answer but within the same category.
-					br
-					| For example, if the question is "What is the capital of France?" a good answer could be "Plymouth", a bad answer would be "Grape Soda",
-				li You must answer in a timely manner, if you take too long to answer you will be disqualified.
-					br
-					| Decide on a time limit before you start playing. Consider age and ability of players.
-			p Ready to start?
-				| !{' '}
-				select
-					option(value="albmyx569bmpyy8wqyed08af4mjrltzd" disabled) General set №1
-		footer.center
-			button#start Start
+			section
+				h1 Wrong Answers Only game
+				h2 A quiz game where the wrong answers are the right ones.
+				h3 How to play
+				ol
+					li You will be given a question, you must answer it with a wrong answer but within the same category.
+						br
+						| For example, if the question is "What is the capital of France?" a good answer could be "Plymouth", a bad answer would be "Grape Soda",
+					li You must answer in a timely manner, if you take too long to answer you will be disqualified.
+						br
+						| Decide on a time limit before you start playing. Consider age and ability of players.
+				p Ready to start?
+					| !{' '}
+					select
+						option(value="albmyx569bmpyy8wqyed08af4mjrltzd" disabled) General set №1
+			footer.center
+				button#start Start
 		script(src="./index.ts")
