--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 :root {
 	--color-background: #fff;
 	--color-text: #000;
+	--max-height: 1000px;
+	--max-width: 1000px;
 }
 @media (prefers-color-scheme: dark) {
 	:root {
@@ -11,6 +13,7 @@
 * {
 	font-family: inherit;
 }
+
 body {
 	background-color: var(--color-background);
 	color: var(--color-text);
@@ -24,7 +27,25 @@ body {
 	font-size: 1.1rem;
 }
 main {
+	box-sizing: border-box;
+	width: 100%;
+	height: 100%;
 	padding: 1rem;
+	flex: 1;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	flex-direction: column;
+	max-height: var(--max-height);
+	max-width: var(--max-width);
+	box-shadow: 0 0 10px var(--color-text);
+}
+section {
+	overflow: auto;
+}
+footer {
+	width: 100%;
+	max-width: var(--max-width);
 }
 .small {
 	font-size: 0.8em;
@@ -32,8 +53,10 @@ main {
 .center {
 	text-align: center;
 }
+h1 { font-size: 1.5em; }
+h2 { font-size: 1.3em; }
+h3 { font-size: 1.2em; }
 button {
-	border-radius: 1rem;
 	border: none;
 	padding: 0.5rem 1rem;
 	background: var(--color-text);
@@ -41,6 +64,11 @@ button {
 	font-size: 1.2em;
 	font-weight: bold;
 	cursor: pointer;
+}
+footer button {
+	box-sizing: border-box;
+	width: 100%;
+	padding: 1rem;
 }
 a {
 	color: var(--color-text);
